--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Clonar repositorio
-        uses: actions/checkout@v3
+    - uses: actions/checkout@v4
+    - name: Set up JDK 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
 
-      - name: Instalar .NET
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'
-
-      - name: Restaurar dependencias
-        run: dotnet restore
-
-      - name: Compilar
-        run: dotnet build --no-restore
-
-      - name: Ejecutar pruebas
-        run: dotnet test --no-build --verbosity normal
+    - name: Build with Maven
+      run: mvn clean verify
