--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,5 @@ jobs:
         distribution: 'temurin'
 
     - name: Build with Maven
+      working-directory: ./Calculadora
       run: mvn clean verify
